syntax = "proto3";

package consignment;

// we define a service that would be drive by grpc
service ShippingService {
  rpc CreateConsignment(Consignment) returns (Response) {}
   rpc GetConsignments(GetRequest) returns (Response) {}
}

// below we define models for message that we shall use in this service driven by protco

message Consignment {
  string id = 1;
  string description = 2;
  int32 weight = 3;
  repeated Container containers = 4;
  string vessel_id = 5;
}

message Container {
  string id = 1;
  string customer_id = 2;
  string origin = 3;
  string user_id = 4;
}

// this would container the filter params
message GetRequest {}

message Response {
  bool created = 1;
  Consignment consignment = 2;

  // send a list of consignments
  repeated Consignment consignments = 3;
}